--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/fortify": "^1.21",
         "laravel/framework": "^11.0",
+        "laravel/horizon": "^5.23",
         "laravel/jetstream": "^5.0",
         "laravel/reverb": "@beta",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "predis/predis": "^2.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
