--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "predis/predis": "^2.2",
+        "spatie/laravel-medialibrary": "^11.4",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
